<resources>
    <string name="app_name">Eticallv01</string>
    <string name="lblLogin">Login</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtApellidos">Apellidos</string>
    <string name="txtmail">Correo</string>
    <string name="txtPw">Contraseña</string>
    <string name="txtPw2">Repite la Contraseña</string>
    <string name="btnLogin">Iniciar</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="txtUnidad">Unidad</string>
    <string name="txtDepartamento">Departamento</string>
    <string name="txtDocumento">Documento</string>
    <string name="btn_Enviar">Enviar</string>
    <string name="txt_Campo_mensaje">Escribe un mensaje</string>
    <string name="txt_Correo">Casos</string>

    <string name="campo_Filtro">nombre</string>
    <string name="campo_Correo_Estudiante">keyEstudiante</string>
    <string name="campo_Correo_Docente">keyDocente</string>
    <string name="Carga_inicial">perfil</string>
    <string name="campo_Validar_Existencia">Documento</string>
    <string name="campo_Validar_Profesor">dc</string>

</resources>
