<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegistro"
    android:background="#ffff">


    <EditText
        android:id="@+id/txt_correo"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="191dp"
        android:ems="10"
        android:hint="@string/txtmail"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Apellidos"
        tools:textSize="14sp"
        tools:typeface="serif" />

    <EditText
        android:id="@+id/pw"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_Name"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/txtPw"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_correo"
        tools:textSize="14sp"
        tools:typeface="serif" />

    <EditText
        android:id="@+id/txt_Name"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:hint="@string/txtNombre"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:textSize="14sp"
        tools:typeface="serif" />

    <EditText
        android:id="@+id/txt_confir"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:hint="@string/txtPw2"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/pw"
        app:layout_constraintTop_toBottomOf="@+id/txt_correo"
        tools:textSize="14sp"
        tools:typeface="serif" />

    <EditText
        android:id="@+id/txt_Apellidos"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="133dp"
        android:ems="10"
        android:hint="@string/txtApellidos"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Name"
        tools:textSize="14sp"
        tools:typeface="serif" />

    <Spinner
        android:id="@+id/Sp_grado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_confir" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="153dp"
        android:layout_height="33dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:background="#FF69B9AD"
        android:text="@string/btnRegistrar"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sp_grado"
        tools:typeface="serif" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="REGISTRO ESTUDIANTE"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="107dp"
        android:layout_height="107dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="84dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sp_grado"
        app:srcCompat="@mipmap/e_tic_all" />
</RelativeLayout>