<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegistroDo"
    android:background="#ffff">


    <EditText
        android:id="@+id/txt_correo"
        android:layout_width="310dp"
        android:layout_height="37dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="173dp"
        android:ems="10"
        android:hint="@string/txtmail"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Apellidos"
        tools:textSize="14sp"
        tools:typeface="serif" />

    <EditText
        android:id="@+id/pw"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/txt_Name"
        android:layout_marginBottom="200dp"
        android:ems="10"
        android:hint="@string/txtPw"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_correo"
        tools:textSize="14sp" />

    <EditText
        android:id="@+id/txt_Name"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/txtNombre"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/txt_confir"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/pw"
        android:layout_marginEnd="7dp"
        android:ems="10"
        android:hint="@string/txtPw2"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pw"
        app:layout_constraintTop_toBottomOf="@+id/txt_correo"
        tools:textSize="14sp"
        tools:typeface="serif" />

    <EditText
        android:id="@+id/txt_Apellidos"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="115dp"
        android:ems="10"
        android:hint="@string/txtApellidos"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Name" />

    <EditText
        android:id="@+id/txt_Unidad"
        android:layout_width="308dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="223dp"
        android:ems="10"
        android:hint="@string/txtUnidad"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Documento"
        tools:textSize="14sp"
        tools:typeface="serif" />

    <EditText
        android:id="@+id/txt_Departamento"
        android:layout_width="155dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/txt_correo"
        android:layout_alignTop="@+id/txt_Documento"
        android:ems="10"
        android:hint="@string/txtDepartamento"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/txt_Unidad"
        app:layout_constraintEnd_toStartOf="@+id/txt_Documento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pw"
        tools:textSize="14sp"
        tools:typeface="serif" />

    <EditText
        android:id="@+id/txt_Documento"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/pw"
        android:layout_marginBottom="143dp"
        android:ems="10"
        android:hint="CC"
        android:inputType="number"
        android:textSize="14sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_confir"
        tools:textSize="14sp" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="141dp"
        android:layout_height="25dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:background="#6BA0D9"
        android:text="@string/btnRegistrar"
        android:textColor="#FFFFFF"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Unidad"
        app:layout_constraintVertical_bias="1.0"
        tools:typeface="serif" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="REGISTRO DOCENTE"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:typeface="serif" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="75dp"
        android:layout_height="76dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:contentDescription="@string/txtPw2"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Unidad"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/e_tic_all" />
</RelativeLayout>